--- a/part3/phonebook/fly.toml
+++ b/part3/phonebook/fly.toml
@@ -3,13 +3,13 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'phonebook-backend-3'
-primary_region = 'bos'
+app = "phonebook-backend-3"
+primary_region = "bos"
 
 [build]
 
 [env]
-  PORT = "3000" 
+  PORT = "3000"
 
 [http_service]
   internal_port = 3000
@@ -17,9 +17,9 @@ primary_region = 'bos'
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-  processes = ['app']
+  processes = ["app"]
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
+  memory = "1024"
+  cpu_kind = "shared"
   cpus = 1
