--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -4,9 +4,9 @@
   "description": "Allows users to save information about interesting blogs across the internet",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node --test"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env NODE_ENV=test node --test"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,9 @@
     "nodemon": "^3.1.7"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
+    "supertest": "^7.0.0",
     "tap": "^21.0.1"
   }
 }
