--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mocha": "^10.8.2",
     "mongoose": "^8.8.1",
     "nodemon": "^3.1.7"
